--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Perl extension MouseX::AttributeHelpers
 
+0.02
+        - added test for Any::Moose
+        - works with 'ro', 'builder' and 'lazy_build' attributes
+
 0.01
         - original version
