--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension MouseX::AttributeHelpers
 
+0.03
+        - no functional changes, no need to update
+        - moved Any::Moose dependency to test_requires section
+
 0.02
         - added test for Any::Moose
         - works with 'ro', 'builder' and 'lazy_build' attributes
