--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension MouseX::AttributeHelpers
 
+0.04
+        - use Mouse 0.37, thanks to Goro Fuji (gfx)
+
 0.03
         - no functional changes, no need to update
         - moved Any::Moose dependency to test_requires section
