Checking in changes prior to tagging of version 0.05.  Changelog diff is:
diff --git a/Changes b/Changes
index d687054..163739d 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension MouseX::AttributeHelpers

+0.05
+        - Modernize the code for new Mouse (gfx)
+        - use Mouse 0.40 (gfx)
+
 0.04
         - use Mouse 0.37, thanks to Goro Fuji (gfx)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension MouseX::AttributeHelpers
 
+0.05
+        - Modernize the code for new Mouse (gfx)
+        - use Mouse 0.40 (gfx)
+
 0.04
         - use Mouse 0.37, thanks to Goro Fuji (gfx)
 
