Checking in changes prior to tagging of version 0.07.
Changelog diff is:

diff --git a/Changes b/Changes
index ab06838..d0438b4 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension MouseX::AttributeHelpers

+0.07
+        - Fix ImmutableHash's get problem (kzys)
+
 0.06
         - Make submodules auto-loaded (gfx)
         - Make metaclasses immutable (gfx)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension MouseX::AttributeHelpers
 
+0.07
+        - Fix ImmutableHash's get problem (kzys)
+
 0.06
         - Make submodules auto-loaded (gfx)
         - Make metaclasses immutable (gfx)
